
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PUTLONG (int,char*) ;
 int PUTSHORT (int,char*) ;
 char* buf ;

int send_hello()
{
int len;
char *p = buf;
 *p++ = 22;
 PUTSHORT(0x0300, p);
 PUTSHORT(85, p);

 *p++ = 1;

 *p++ = 0;
 PUTSHORT(81, p);

 PUTSHORT(0x0300, p);
 PUTLONG(0xffffffff, p);


 PUTLONG(0x11223344, p);
 PUTLONG(0x11223344, p);
 PUTLONG(0x11223344, p);
 PUTLONG(0x11223344, p);
 PUTLONG(0x11223344, p);
 PUTLONG(0x11223344, p);
 PUTLONG(0x11223344, p);

 *p++ = 0;

 PUTSHORT(42, p);
 PUTSHORT(0x16, p);
 PUTSHORT(0x13, p);
 PUTSHORT(0x0a, p);
 PUTSHORT(0x66, p);
 PUTSHORT(0x07, p);
 PUTSHORT(0x05, p);
 PUTSHORT(0x04, p);
 PUTSHORT(0x65, p);
 PUTSHORT(0x64, p);
 PUTSHORT(0x63, p);
 PUTSHORT(0x62, p);
 PUTSHORT(0x61, p);
 PUTSHORT(0x60, p);
 PUTSHORT(0x15, p);
 PUTSHORT(0x12, p);
 PUTSHORT(0x09, p);
 PUTSHORT(0x14, p);
 PUTSHORT(0x11, p);
 PUTSHORT(0x08, p);
 PUTSHORT(0x06, p);
 PUTSHORT(0x03, p);

 *p++ = 1;
 *p++ = 0;

 len = p - buf;
 return len;
}
